src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Blue_Sheet_Managers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM - Blue Sheet Managers license for large org.</description>
        <label>Blue Sheet Managers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue_Sheet_Read_Only_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Blue Sheet licenses option for large orgs.</description>
        <label>Blue Sheet Read Only License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Number_of_Sales_Approval_Levels__c</fullName>
        <description>Used for Approvals</description>
        <label>Number of Sales Approval Levels</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_General_Announcements__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - General Announcements</description>
        <label>General Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Profile_Name__c</fullName>
        <formula>$Profile.Name</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Email_For_DM__c</fullName>
        <label>RightNow Email For DM</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Service_Maintenance_Security__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Service/Maintenance/Security</description>
        <label>Service / Maintenance / Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Software_Releases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Software Releases</description>
        <label>Software Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Surveys__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Surveys</description>
        <label>Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Technical_Bulletin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Technical Bulletin</description>
        <label>Technical Bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Terms_Conditions_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Terms and Conditions accepted</description>
        <label>Terms &amp; Conditions Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Terms_Conditions_Last_Accepted__c</fullName>
        <description>Terms and conditions last accepted by a Community user</description>
        <label>Terms &amp; Conditions Last Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_User_Team__c</fullName>
        <label>User Team</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enablement-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enablement-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enablement-Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gold_Sheet_Managers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Gold Sheet Managers license for large orgs.</description>
        <label>Gold Sheet Managers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gold_Sheet_Read_Only_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM - Gold Sheet Read Only license for large orgs.</description>
        <label>Gold Sheet Read Only License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gold_Sheet_Read_Write_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Gold Sheet R/W licenses for large orgs</description>
        <label>Gold Sheet Read Write License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Sheet_Managers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Green Sheet Managers licenses for large orgs.</description>
        <label>Green Sheet Managers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Sheet_Read_Only_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Green Sheet Read Only license for large orgs.</description>
        <label>Green Sheet Read Only License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Sheet_Read_Write_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Green Sheet Read/Write licenses for large orgs.</description>
        <label>Green Sheet Read Write License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_AcceleratorAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerator Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities_per_quarter_quota__c</fullName>
        <label>Opportunities per quarter quota</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Stage__c</fullName>
        <description>Used for Integration Logging</description>
        <inlineHelpText>Used for Integration Logging</inlineHelpText>
        <label>PSA Resource Stage</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Worker_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique Worker Id from Workday</inlineHelpText>
        <label>Worker Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <picklist>
            <picklistValues>
                <fullName>Guided Selling</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Search Filters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Followed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAT_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAT Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uat_Load__c</fullName>
        <label>Uat Load</label>
        <picklist>
            <picklistValues>
                <fullName>Uat Load on 8/27</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ad_calls_per_week_target__c</fullName>
        <description>The account development call goals per week.</description>
        <label>Calls per week target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ad_prospect_meetings_setup_per_week__c</fullName>
        <description>Prospect meetings per week setup</description>
        <label>Prospect meetings setup per week target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__CC_CurrencyCode__c</fullName>
        <description>Customized Currency field for Orgs which don&apos;t have  Multi-currency feautre.</description>
        <label>Currency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <picklist>
            <picklistValues>
                <fullName>ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccrz__ContactTypeRole__c</fullName>
        <description>CloudCraze contact type role</description>
        <label>Contact Type Role</label>
        <picklist>
            <picklistValues>
                <fullName>Researcher/Post Doc</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Investigator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccrz__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the current user gets qualified for the tax-exempt</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Industry__c</fullName>
        <description>CloudCraze user industry</description>
        <label>User Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Academic research</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM-Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Salutation__c</fullName>
        <description>CloudCraze user salutation</description>
        <label>User Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mh_Blue_Sheet_Read_Write_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Blue Sheet License for large orgs.</description>
        <label>Blue Sheet Read Write License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>psa_Login_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used for Distinct User reporting</description>
        <label>Login Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__QuickCompleteCountry__c</fullName>
        <label>QuickComplete Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveWithoutRoleUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>OFFLINE_USER</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <columns>MARKETING_USER</columns>
        <columns>STORAGE_USED</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>GW Inactive</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filters>
        <label>Active without Role</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Alliance_Users_Active</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>alliances</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Alliance Users- Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Internal_Users_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>All Internal Users - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Users_Active</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MARKETING_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Marketing Users- Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OfflineUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OFFLINE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Offline Users</label>
    </listViews>
    <listViews>
        <fullName>Partner_Community_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Partner Community User,Partner Community Manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Community Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CS_Prevent_comm_user_changing_email_addr</fullName>
        <active>true</active>
        <description>This validation rule will prevent community users from changing email address on the community.</description>
        <errorConditionFormula>AND((ISCHANGED(Email)), OR(Text($User.UserType) = &apos;Customer Portal Manager&apos;,  text($User.UserType) = &apos;Partner&apos;))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Sorry, You cannot change your email address. Please contact the support team to change your email address.</errorMessage>
    </validationRules>
</CustomObject>